--- a/api-reference/core-testing-apis/parameterized-typed-tests.mdx
+++ b/api-reference/core-testing-apis/parameterized-typed-tests.mdx
@@ -1,243 +1,282 @@
 ---
-title: "Parameterized and Typed Tests"
-description: "Guides users through creating value-parameterized and type-parameterized tests for maximum test coverage with minimal redundancy. Explains data generators, test instantiation, and advanced combinatorics, with code snippets for the most common use cases."
+title: "Parameterized & Typed Tests"
+description: "Covers mechanisms for writing value-parameterized and type-parameterized tests using TEST_P and TYPED_TEST macros. Explains test instantiation, parameter generators, and patterns for maximizing code reuse across test cases."
 ---
 
-# Parameterized and Typed Tests
+# Parameterized & Typed Tests
 
-GoogleTest enhances your testing strategy by allowing you to write tests that automatically run across a range of values and types. This approach maximizes coverage while minimizing repetitive code, empowering you to build more robust tests with less effort. This guide walks you through crafting value-parameterized and type-parameterized tests, explains the use of data generators for parameters, how to instantiate these tests, and demonstrates advanced combinatorics techniques with practical code snippets.
-
----
-
-## What Are Parameterized and Typed Tests?
-
-- **Value-Parameterized Tests (Value-Parameterized Tests)** let you run the same test logic over different input values.
-- **Typed Tests** allow you to write tests that work over a fixed list of types.
-- **Type-Parameterized Tests** enable defining test patterns that can be instantiated later with different type lists, offering flexibility for interface and concept testing.
-
-Using these tests helps you avoid duplication, maintain consistency, and cover diverse scenarios efficiently.
+GoogleTest provides powerful mechanisms to write tests that are automatically executed with different inputs or for different types. This dramatically reduces duplication and increases test coverage with minimal effort. This page covers the key features of value-parameterized and type-parameterized tests, including how to write them, instantiate test suites, and maximize code reuse.
 
 ---
 
-## Value-Parameterized Tests
+## Value-Parameterized Tests (TEST_P)
 
-Value-parameterized tests run the same test logic multiple times, each with a different input value you provide.
-
-### Getting Started
-
-1. **Create a Test Fixture** that inherits from `::testing::TestWithParam<T>`, where `T` is the parameter type.
-2. **Define Tests** using `TEST_P` macros that access the parameter with the `GetParam()` method.
-3. **Instantiate the Test Suite** using `INSTANTIATE_TEST_SUITE_P`, supplying a unique instantiation name, the test suite, and a parameter generator.
-
-### Example
-
-```cpp
-class FooTest : public ::testing::TestWithParam<int> {};
-
-TEST_P(FooTest, IsEven) {
-  int value = GetParam();
-  EXPECT_EQ(value % 2, 0);
-}
-
-INSTANTIATE_TEST_SUITE_P(EvenValues, FooTest, ::testing::Values(2, 4, 6, 8));
-```
-
-This example creates four instances of `FooTest.IsEven`, each running with a value from the list.
-
-### Parameter Generators
-
-Parameters for instantiations can come from several built-in generators, including:
-
-| Generator | Description |
-| --------- | ----------- |
-| `Range(start, end[, step])` | Produces a sequence of values from `start` to `end` (excluding `end`), stepping by `step` (defaults to 1). |
-| `Values(v1, v2, ..., vN)` | Uses the explicitly listed values. |
-| `ValuesIn(container)` | Uses elements from a container or iterator range. |
-| `Bool()` | Yields `{false, true}` for testing Boolean scenarios. |
-| `Combine(g1, g2, ..., gN)` | Creates the Cartesian product of multiple generators, yielding tuples of all combinations. |
-| `ConvertGenerator<T>(g)` | Converts generated values to an intermediate type `T`, needed when the test parameter type is not directly constructible from the generated values.
-
-### Combining Multiple Parameters
-
-Using `Combine()`, you can generate all combinations of parameters from multiple sequences.
-
-```cpp
-using ::testing::Combine;
-using ::testing::Values;
-
-class PairTest : public TestWithParam<std::tuple<int, char>> {};
-
-TEST_P(PairTest, WorksForAllPairs) {
-  int i; char c;
-  std::tie(i, c) = GetParam();
-  // Your test logic
-}
-
-INSTANTIATE_TEST_SUITE_P(AllPairs, PairTest, Combine(Values(1, 2), Values('a', 'b')));
-```
-
-This creates tests for all pairs `(1,'a')`, `(1,'b')`, `(2,'a')`, `(2,'b')`.
-
-### Custom Parameter Naming
-
-You can supply a custom function or functor to generate human-readable test names for each parameter instance. Names must be alphanumeric or underscores.
-
-```cpp
-INSTANTIATE_TEST_SUITE_P(
-    CustomNames, FooTest, Values(1, 2, 3),
-    [](const testing::TestParamInfo<int>& info) {
-      return "Value" + std::to_string(info.param);
-    });
-```
-
-The tests will be named accordingly, e.g., `CustomNames/FooTest.Value1`.
-
-### Best Practices and Notes
-
-- Place the `INSTANTIATE_TEST_SUITE_P` macros in global or namespace scope, not inside functions.
-- If you have value-parameterized tests not meant to be instantiated, suppress warnings using `GTEST_ALLOW_UNINSTANTIATED_PARAMETERIZED_TEST(FooTest);`.
-- Manage lifetimes carefully when using pointers as parameters.
-
----
-
-## Typed Tests
-
-Typed tests are great when the test logic is the same across multiple types known in advance.
-
-### Workflow
-
-1. **Define a Fixture Template** parameterized by a type and inheriting from `testing::Test`.
-2. **Associate a List of Types** with the fixture using `TYPED_TEST_SUITE(FixtureName, Types);`.
-3. **Write Typed Tests** using `TYPED_TEST(FixtureName, TestName)`, referencing the test type as `TypeParam`.
-
-### Example
-
-```cpp
-template <typename T>
-class NumericTest : public testing::Test {
- public:
-  T value_{};
-};
-
-using MyTypes = ::testing::Types<int, float, double>;
-TYPED_TEST_SUITE(NumericTest, MyTypes);
-
-TYPED_TEST(NumericTest, IsZeroOnInit) {
-  EXPECT_EQ(this->value_, TypeParam(0));
-}
-```
-
-This runs the same test logic over `int`, `float`, and `double`.
-
-### Custom Type Names
-
-Optionally provide a `NameGenerator` class with a `static std::string GetName(int)`
-that uniquely names types for test runner output.
-
-### Notes
-
-- You must know the type list at compile time.
-- To directly specify a single type, write `TYPED_TEST_SUITE(FixtureName, int);`.
-
----
-
-## Type-Parameterized Tests
-
-Type-parameterized tests give you the flexibility to define test logic without fixing the types until instantiation.
+Value-parameterized tests allow you to write a test once and run it multiple times with different parameter values. This is ideal for data-driven testing, interfaces with multiple implementations, or testing different input configurations.
 
 ### How It Works
 
-1. Define the template test fixture, inheriting from `testing::Test`.
-2. Use `TYPED_TEST_SUITE_P(FixtureName);` to declare the type-parameterized test suite.
-3. Define tests using `TYPED_TEST_P(FixtureName, TestName)`.
-4. Register tests with `REGISTER_TYPED_TEST_SUITE_P(FixtureName, TestName1, TestName2, ...);`.
-5. Instantiate with `INSTANTIATE_TYPED_TEST_SUITE_P(InstanceName, FixtureName, Types);`.
+1. **Define a Fixture Class:**
+   Your value-parameterized test fixture should derive from `testing::TestWithParam<T>`, where `T` is the parameter type.
 
-### Example
+   ```cpp
+   class FooTest : public testing::TestWithParam<int> {
+     // Your fixture setup and helper methods.
+   };
+   ```
 
+2. **Write Parameterized Tests with `TEST_P`:**
+   Use `TEST_P` instead of `TEST` or `TEST_F` to define the test. Within the test body, access the current parameter via `GetParam()`.
+
+   ```cpp
+   TEST_P(FooTest, HandlesValues) {
+     int param = GetParam();
+     EXPECT_TRUE(SomeFunction(param));
+   }
+   ```
+
+3. **Instantiate the Test Suite:**
+   Use `INSTANTIATE_TEST_SUITE_P` to instantiate the tests with specific parameter values or ranges using GoogleTest's parameter generators.
+
+   ```cpp
+   INSTANTIATE_TEST_SUITE_P(
+       SampleValues,
+       FooTest,
+       testing::Values(1, 2, 3, 42));
+   ```
+
+### Parameter Generators
+
+GoogleTest offers a rich set of parameter generator functions, including:
+
+- `Values(v1, v2, ..., vN)`: Instantiates tests with explicit values.
+- `ValuesIn(container)`: Instantiates tests using all values in a container or array.
+- `Range(begin, end [, step])`: Generates sequential values from `begin` up to (but not including) `end` with an optional step (default 1).
+- `Bool()`: Generates `{false, true}`.
+- `Combine(g1, g2, ..., gN)`: Cartesian product of multiple generators, producing all combinations as tuples.
+
+Example combining parameters:
 ```cpp
-template <typename T>
-class FooTest : public testing::Test {};
-
-TYPED_TEST_SUITE_P(FooTest);
-
-TYPED_TEST_P(FooTest, TestBehavior) {
-  TypeParam value{};
-  // test logic using value
-}
-
-REGISTER_TYPED_TEST_SUITE_P(FooTest, TestBehavior);
-
-using TypesToTest = ::testing::Types<int, double>;
-INSTANTIATE_TYPED_TEST_SUITE_P(MyInstances, FooTest, TypesToTest);
+INSTANTIATE_TEST_SUITE_P(
+    BoolAndRange,
+    MyTest,
+    testing::Combine(testing::Bool(), testing::Range(1, 3)));
 ```
 
-You can instantiate the pattern multiple times in different files or in the same file with different type lists.
+### Custom Test Names
+
+By default, test names include indices. To make names more meaningful, provide a custom name generator function or functor as the last argument to `INSTANTIATE_TEST_SUITE_P`. This function takes a `TestParamInfo<T>` and returns a valid test name suffix (alphanumeric and underscores only).
+
+```cpp
+INSTANTIATE_TEST_SUITE_P(
+    FriendlyNames,
+    FooTest,
+    testing::Values("red", "green", "blue"),
+    [](const testing::TestParamInfo<std::string>& info) {
+      std::string name = info.param;
+      std::replace_if(name.begin(), name.end(),
+                      [](char c) { return !std::isalnum(c); }, '_');
+      return name;
+    });
+```
 
 ### Notes
 
-- This is ideal when building libraries or interface compliance tests.
-- You must register tests before instantiating.
-- Instantiations add prefixes to test suite names to keep them distinct.
+- The fixture class must declare `SetUpTestSuite()`/`TearDownTestSuite()` as `public` if used with `TEST_P`.
+- Parameter generators are evaluated after `InitGoogleTest()` is called, allowing runtime parameter determination.
+- Tests without instantiation (i.e., defined but not instantiated) fail by default, unless tagged with `GTEST_ALLOW_UNINSTANTIATED_PARAMETERIZED_TEST`.
 
 ---
 
-## Practical Tips and Common Pitfalls
+## Typed Tests (TYPED_TEST)
 
-- Use `SCOPED_TRACE()` to add context to complex assertions and trace failures.
-- Fatal failures in helper functions propagate only up to the helper; use `ASSERT_NO_FATAL_FAILURE()` to verify subroutine failures.
-- To customize test parameter naming, implement a custom naming function accepting `TestParamInfo<T>`.
-- To test internal (private or static) parts of your code with parameterized or typed tests, consider using `FRIEND_TEST` or refactor internals into testable classes.
-- Always instantiate your parameterized and typed tests; otherwise, GoogleTest may mark them as uninstantiated.
+Typed tests allow you to run the same test logic for a list of types known at compile-time. This is ideal for testing multiple implementations of an interface or type-concept conformance.
 
----
+### How It Works
 
-## Illustrated User Flow for Parameterized Tests
+1. **Define a Fixture Class Template:**
+   Define a class template derived from `testing::Test` parameterized by a type.
 
-```mermaid
-flowchart TD
-  A[Define Test Fixture with Parameter] --> B[Write TEST_P with GetParam()]
-  B --> C[Select Parameter Generator (Range, Values, etc.)]
-  C --> D[Instantiate with INSTANTIATE_TEST_SUITE_P]
-  D --> E[Run Tests for Each Parameter]
-  E --> F{Results}
-  F -->|Pass| G[Success]
-  F -->|Fail| H[Debug Using Trace & Error Messages]
+   ```cpp
+   template <typename T>
+   class StackTest : public testing::Test {
+     // Shared logic, typedefs, static members
+   };
+   ```
+
+2. **Associate a Type List:**
+   Use `testing::Types<Types...>` to specify the list of types.
+
+   ```cpp
+   using MyTypes = testing::Types<int, double, std::string>;
+   TYPED_TEST_SUITE(StackTest, MyTypes);
+   ```
+
+3. **Write Tests Using `TYPED_TEST`:**
+   Use `TYPED_TEST` to define tests. Inside the tests, refer to the type via `TypeParam`.
+
+   ```cpp
+   TYPED_TEST(StackTest, CanPushAndPop) {
+     TypeParam value = ...;
+     Stack<TypeParam> stack;
+     stack.Push(value);
+     EXPECT_EQ(stack.Pop(), value);
+   }
+   ```
+
+4. **Test Execution:**
+   The test suite runs once for each type in the list.
+
+### Optional Custom Name Generator
+
+You can specify a custom class with a static templated `GetName(int)` method to generate readable test suffixes per type.
+
+```cpp
+class MyNameGen {
+ public:
+  template <typename T>
+  static std::string GetName(int) {
+    if constexpr (std::is_same_v<T, int>) return "Int";
+    if constexpr (std::is_same_v<T, double>) return "Double";
+    return "Other";
+  }
+};
+
+typedef testing::Types<int, double> MyTypes;
+TYPED_TEST_SUITE(StackTest, MyTypes, MyNameGen);
 ```
 
 ---
 
-## Frequently Used Macros and Functions
+## Type-Parameterized Tests (TYPED_TEST_P)
 
-| Macro / Function                  | Purpose                                                |
-|---------------------------------|--------------------------------------------------------|
-| `TEST_P(Fixture, TestName)`      | Define a value-parameterized test using a fixture.     |
-| `INSTANTIATE_TEST_SUITE_P`       | Instantiate a value-parameterized test suite.          |
-| `TYPED_TEST_SUITE(Fixture, Types)` | Define typed tests with specified types.               |
-| `TYPED_TEST(Fixture, TestName)` | Write a typed test.                                     |
-| `TYPED_TEST_SUITE_P(Fixture)`    | Declare a type-parameterized test suite.                |
-| `TYPED_TEST_P(Fixture, TestName)`| Write a test in a type-parameterized suite.             |
-| `REGISTER_TYPED_TEST_SUITE_P`    | Register tests in a type-parameterized suite.           |
-| `INSTANTIATE_TYPED_TEST_SUITE_P`| Instantiate a type-parameterized test suite.            |
+Type-parameterized tests are similar to typed tests but handle type lists that are not known at the time of test logic definition, enabling test libraries or interfaces to define test patterns that can be instantiated with different types in multiple translation units.
+
+### How It Works
+
+1. **Define Test Suite Template and Declare Usage:**
+   ```cpp
+   template <typename T>
+   class FooTest : public testing::Test {
+     // ...
+   };
+   
+   TYPED_TEST_SUITE_P(FooTest);
+   ```
+
+2. **Define Typed Tests:**
+   Use `TYPED_TEST_P` to define tests, similarly using `TypeParam`.
+
+   ```cpp
+   TYPED_TEST_P(FooTest, DoesThis) {
+     TypeParam val = ...;
+     EXPECT_TRUE(SomeTest(val));
+   }
+   ```
+
+3. **Register Tests:**
+   You must register all typed test names before instantiating.
+
+   ```cpp
+   REGISTER_TYPED_TEST_SUITE_P(FooTest, DoesThis, DoesThat);
+   ```
+
+4. **Instantiate with Types:**
+   You can instantiate the suite with a type list and a unique prefix.
+
+   ```cpp
+   using MyTypes = testing::Types<int, double>;
+   INSTANTIATE_TYPED_TEST_SUITE_P(MyPrefix, FooTest, MyTypes);
+   ```
+
+This allows flexible, reusable test patterns across projects without hardcoding type lists in tests.
+
+---
+
+## Best Practices & Tips
+
+- **Avoid underscores `_` in test suite and test names** because GoogleTest uses underscores internally in generated class names. Underscores in names may lead to collisions or undefined behavior.
+- **Parameter Types:** Make sure the parameter type `T` used in `TestWithParam<T>` is copyable and its output to an ostream is defined or `PrintToString` is specialized.
+- **Custom Names:** Provide custom parameter name generators for better test naming, especially with string or complex types.
+- **Value Lifetime:** Be careful when using `ValuesIn` or conversions that involve references or pointers to ensure data stays valid during test instantiation.
+- **Use Typed Tests for type-list based repetitive testing.** Use value-parameterized tests when testing with variable input values.
+- **Uninstantiated Parameterized Tests:** If tests are defined but not instantiated on purpose (library or plugin), mark them with `GTEST_ALLOW_UNINSTANTIATED_PARAMETERIZED_TEST`.
+
+---
+
+## Example
+
+```cpp
+// Define a test fixture for value-parameterized tests
+class MyParamTest : public testing::TestWithParam<int> {};
+
+// Define a parameterized test
+TEST_P(MyParamTest, IsEven) {
+  int number = GetParam();
+  EXPECT_EQ(number % 2, 0);
+}
+
+// Instantiate tests with various parameters
+INSTANTIATE_TEST_SUITE_P(EvenNumbers, MyParamTest, testing::Values(2, 4, 6, 8));
+
+// Define a typed test fixture
+template <typename T>
+class StackTest : public testing::Test {};
+
+// Register types
+using MyTypes = testing::Types<int, double>;
+
+// Associate types with the test suite
+TYPED_TEST_SUITE(StackTest, MyTypes);
+
+// Define a typed test
+TYPED_TEST(StackTest, DefaultConstructor) {
+  TypeParam val{};
+  EXPECT_TRUE(IsDefaultConstructible(val));
+}
+
+// Define a type-parameterized test
+template <typename T>
+class FooTest : public testing::Test {};
+TYPED_TEST_SUITE_P(FooTest);
+
+TYPED_TEST_P(FooTest, DoesSomething) {
+  TypeParam val{};
+  EXPECT_EQ(DoSomething(val), expected);
+}
+
+REGISTER_TYPED_TEST_SUITE_P(FooTest, DoesSomething);
+using OtherTypes = testing::Types<int, float>;
+INSTANTIATE_TYPED_TEST_SUITE_P(MyInst, FooTest, OtherTypes);
+```
 
 ---
 
 ## Troubleshooting
 
-- **Tests not running:** Make sure you have instantiated parameterized tests with `INSTANTIATE_TEST_SUITE_P` or your typed tests with `INSTANTIATE_TYPED_TEST_SUITE_P`.
-- **Duplicate or invalid test names:** Ensure custom test name generators return unique, valid names (alphanumeric and underscore).
-- **Unsupported parameter types:** Use `ConvertGenerator` to convert generated values to the fixture's parameter type.
-- **Assertion failures lack context:** Utilize `SCOPED_TRACE()` to improve traceability of failures across test parameter iterations.
+<AccordionGroup title="Common Issues and Solutions">
+<Accordion title="Tests Not Running">
+Check that your parameterized tests have been instantiated using `INSTANTIATE_TEST_SUITE_P`. Remember that tests defined with `TEST_P` / `TYPED_TEST` but without instantiation will trigger failures unless marked with `GTEST_ALLOW_UNINSTANTIATED_PARAMETERIZED_TEST`.
+</Accordion>
+<Accordion title="Invalid Test Names / Compilation Errors">
+Avoid underscores in test suite and test names to prevent naming collisions. Also check that your custom name generators produce only alphanumeric and underscore characters.
+</Accordion>
+<Accordion title="Parameter Type Issues">
+Make sure your parameter type is copyable and streamable or provide a `PrintToString` overload for custom types.
+</Accordion>
+</AccordionGroup>
 
 ---
 
-## Further Reading and Related Documentation
+## References
 
-- Learn more about [Value-Parameterized Tests](../advanced.md#value-parameterized-tests).
-- Explore [Typed Tests](../advanced.md#typed-tests) and [Type-Parameterized Tests](../advanced.md#type-parameterized-tests) for deeper understanding.
-- See the [Testing Reference](docs/reference/testing.md) for API details.
-- Try out [sample test files](https://github.com/google/googletest/tree/main/googletest/samples/) for hands-on examples.
+- [Value-Parameterized Tests](../advanced.md#value-parameterized-tests)
+- [Typed Tests](../advanced.md#typed-tests)
+- [Type-Parameterized Tests](../advanced.md#type-parameterized-tests)
+- [Testing Reference - TEST_P and related macros](reference/testing.md#TEST_P)
+- [FAQ on Underscores in Names](docs/faq.md#why-should-test-suite-names-and-test-names-not-contain-underscore)
 
 ---
 
-For a richer practical experience, refer to the Advanced GoogleTest Topics guide and sample test implementations in the official [GoogleTest GitHub Repository](https://github.com/google/googletest).
+For continued learning, you should explore the guides on [Writing Your First Tests](../../guides/getting-started/writing-your-first-tests.md) and [Advanced Test Structures](../../guides/core-testing-workflows/advanced-test-structures.md) to master the use of parameterized and typed tests in real-world scenarios.
+
+---
